--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -75,7 +75,7 @@
             <ul class="header-links pull-right">
                 <li><a href="#"><i class="fa fa-dollar"></i>RD</a></li>
                 <% if (usuario) { %>
-                    <li><a href="/account"><i class="fa fa-user-o"></i>Mi Perfil</a></li>
+                    <li><a href="/account"><i class="fa fa-user-o"></i>Hola, <%= usuario.username.toUpperCase() %></a></li>
                     <li>
                         <form id="logout-form" action="/api/auth/logout" method="POST" style="display: none;"></form>
                         <a href="#" onclick="document.getElementById('logout-form').submit();">
