--- a/src/views/components/footer.ejs
+++ b/src/views/components/footer.ejs
@@ -1,4 +1,4 @@
 <footer class="footer">
   <div class="section"></div>
-  <p>&copy; 2025 LavegaTech | <a href="/conditions">Políticas y Condiciones</a> | <a href="/warranty">Garantías</a></p>
+  <p>&copy; 2025 LaVegaTech | <a href="/conditions">Políticas y Condiciones</a> | <a href="/warranty">Garantías</a></p>
 </footer>
