--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -42,6 +42,10 @@
     <!-- Warranty -->
     <link type="text/css" rel="stylesheet" href="/css/warranty.css" />
 
+    <!-- Account -->
+    <link type="text/css" rel="stylesheet" href="/css/account.css" />
+
+
 
    <!-- <link rel="stylesheet" href="/zay/bootstrap.min.css">
     <link rel="stylesheet" href="/zay/templatemo.css">
@@ -83,8 +87,9 @@
                         </a>
                     </li>
                     <% } else { %>
-                        <li><a href="/login"><i class="fa fa-user-o"></i>Mi Cuenta</a></li>
-                <% } %>
+                        <li><a href="/login"><i class="fa fa-sign-in"></i> Iniciar Sesión</a></li>
+                        <li><a href="/register"><i class="fa fa-user-plus"></i> Registrarse</a></li> 
+                        <% } %>
             </ul>
         </div>
     </div>
