--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -73,7 +73,7 @@
         <div class="container">
             <ul class="header-links pull-left">
                 <li><a href="#"><i class="fa fa-phone"></i>+1 809-277-2371</a></li>
-                <li><a href="#"><i class="fa fa-envelope-o"></i>lavegatechsrl@gmail.com</a></li>
+                <li><i class="fa fa-envelope-o"></i><a href="mailto:info@lavegatechgsrl.com" class="enlace">info@lavegatechgsrl.com</a></li>
                 <li><a href="https://maps.app.goo.gl/S85hspS9jMJGpPPt9"><i class="fa fa-map-marker"></i> Calle Libertad, La Vega 41000</a></li>
             </ul>
             <ul class="header-links pull-right">
