--- a/src/views/login/forgotPass/code.ejs
+++ b/src/views/login/forgotPass/code.ejs
@@ -4,7 +4,7 @@
 
   <div class="code-container">
     <h2>Ingresar el código de verificación</h2>
-    <p>Para tu seguridad, enviamos el código a tu correo electrónico <%= email %>.</p>
+    <p>Para tu seguridad, enviamos el código a tu correo electrónico <strong><%= email %></strong></p>
 
     <form method="POST" action="/api/auth/verifyCode">
       <input type="hidden" name="email" value="<%= email %>">
