--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -50,7 +50,7 @@
                             <ul class="footer-links">
                                 <li><a href="https://maps.app.goo.gl/S85hspS9jMJGpPPt9"><i class="fa fa-map-marker"></i>Calle Libertad, La Vega 41000</a></li>
                                 <li><a href="#"><i class="fa fa-phone"></i>+1 809-277-2371</a></li>
-                                <li><a href="#"><i class="fa fa-envelope-o"></i>lavegatechsrl@gmail.com</a></li>
+                                <li><i class="fa fa-envelope-o"></i><a href="mailto:info@lavegatechgsrl.com" class="enlace">info@lavegatechgsrl.com</a></li>
                             </ul>
                         </div>
                     </div>
@@ -88,7 +88,6 @@
                                 <li><a href="/cart">Ver Carrito</a></li>
                                 <li><a href="#">Favoritos</a></li>
                                 <li><a href="#">Mi Pedido</a></li>
-                                <li><a href="#">Ayuda</a></li>
                             </ul>
                         </div>
                     </div>
