Manejo de errores completado en account

--- a/public/css/account.css
+++ b/public/css/account.css
@@ -11,8 +11,8 @@
 }
 
 .contenido-account {
-  max-width: 430px;
-  margin: 0 auto;
+  max-width: 425px;
+  margin: 0px auto;
   padding: 30px;
   background-color: #fff;
   border-radius: 8px;
