--- a/src/views/login/forgotPass/email.ejs
+++ b/src/views/login/forgotPass/email.ejs
@@ -6,7 +6,7 @@
     <p>Escribe la dirección de correo electrónico asociada a tu cuenta.</p>
 
     <form method="POST" action="/api/auth/email">
-      <input type="email" name="email" placeholder="Correo electrónico" required>
+      <input type="email" name="email" placeholder="ejemplo@gmail.com" required>
       <button type="submit">Continuar</button>
     </form>
   </div>
