--- a/src/views/login/register.ejs
+++ b/src/views/login/register.ejs
@@ -10,7 +10,7 @@
     <input type="text" name="username" value="<%= username || '' %>" placeholder="Introducir nombre de usuario" required>
 
     <label>Correo electrónico:</label>
-    <input type="email" name="email" value="<%= email || '' %>"  placeholder="Introducir correo electrónico" required>
+    <input type="email" name="email" value="<%= email || '' %>"  placeholder="ejemplo@gmail.com" required>
 
     <label>Contraseña:</label>
     <input type="password" name="password"  placeholder="Introducir contraseña" required>
