--- a/src/views/login/login.ejs
+++ b/src/views/login/login.ejs
@@ -24,7 +24,7 @@
     
     <form action="/api/auth/login" method="POST">
       <label for="email">Correo electrónico:</label>
-      <input type="email" name="email" value="<%= email || '' %>" placeholder="Introduce el correo" required>
+      <input type="email" name="email" value="<%= email || '' %>" placeholder="ejemplo@gmail.com" required>
       
       <label for="password">Contraseña:</label>
       <div style="position: relative; display: inline-block; width: 100%;">
