--- a/src/views/store/about.ejs
+++ b/src/views/store/about.ejs
@@ -1,8 +1,8 @@
 <%- include('../partials/header.ejs') %>
 
-
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
-
+ <!-- About -->
+ <link type="text/css" rel="stylesheet" href="/css/about.css" />
+ 
 <!-- Open Banner -->
 <section class="fondo-exitoso py-5">
     <div class="contenedor">
