--- a/src/views/information/warranty.ejs
+++ b/src/views/information/warranty.ejs
@@ -1,11 +1,14 @@
 <%- include('../partials/header.ejs') %>
 
-<section class="contenido-garantia">
-    <h2 class="subtitulo-garantias">garantías</h2>
-    <div class="pdf-container">
-        <iframe src="/docs/Garantia-Dispositivos.pdf" class="pdf-iframe"></iframe>
-        <iframe src="/docs/Garantia-Electrodomesticos.pdf" class="pdf-iframe"></iframe>
-    </div>
-</section>
+    <!-- Warranty -->
+    <link type="text/css" rel="stylesheet" href="/css/warranty.css" />
+
+    <section class="contenido-garantia">
+        <h2 class="subtitulo-garantias">garantías</h2>
+        <div class="pdf-container">
+            <iframe src="/docs/Garantia-Dispositivos.pdf" class="pdf-iframe"></iframe>
+            <iframe src="/docs/Garantia-Electrodomesticos.pdf" class="pdf-iframe"></iframe>
+        </div>
+    </section>
 
 <%- include('../partials/footer.ejs') %>
