--- a/src/views/profile/account.ejs
+++ b/src/views/profile/account.ejs
@@ -1,5 +1,8 @@
 <%- include('../partials/header.ejs') %>
 
+    <!-- Account -->
+    <link type="text/css" rel="stylesheet" href="/css/account.css" />
+
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 
   <body>
