--- a/src/views/store/contact.ejs
+++ b/src/views/store/contact.ejs
@@ -1,5 +1,9 @@
 <%- include('../partials/header.ejs') %>
 
+  <!-- Contact -->
+  <link type="text/css" rel="stylesheet" href="/css/contact.css" />
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin="" />
+
 <div class="contactos-page">
 <body>
     <!-- Start Content Page -->
