--- a/public/css/style.css
+++ b/public/css/style.css
@@ -743,24 +743,45 @@ textarea.input {
   visibility: visible;
 }
 
-.cart-dropdown .cart-list {
+.cart-dropdown .cart-list{
   max-height: 330px;
   overflow-y: scroll;
-  margin-bottom: 15px;
+  margin-bottom: 10px;
 }
 
 .cart-dropdown .cart-list .product-widget {
-  padding: 0px;
+  padding: 10px;
   -webkit-box-shadow: none;
   box-shadow: none;
 }
 
 .cart-dropdown .cart-list .product-widget:last-child {
-  margin-bottom: 0px;
+  margin-bottom: 10px;
+}
+
+.product-precios, .product-nombres{
+  position: relative;
+  font-weight: bold;
+  top: -30px;
+  margin-left: 10%;
+}
+
+.product-nombres{
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-size: 16px;
+}
+
+.product-precios{
+  font-size: 14px;
+
 }
 
 .cart-dropdown .cart-list .product-widget .product-img {
-  left: 0px;
+  width: 18%;
+  height: 15%;
+  left: 15px;
   top: 0px;
 }
 
@@ -771,14 +792,8 @@ textarea.input {
   margin-top: 5px;
 }
 
-.cart-dropdown .cart-list .product-widget .product-body .product-name,
-.cart-dropdown .cart-list .product-widget .product-body .product-price,
-.cart-dropdown .cart-list .product-widget .product-body .product-color {
-  margin-top: 5px;
-}
-
-.cart-dropdown .cart-list .product-widget .product-body .product-price {
-  color: #2B2D42;
+.cart-dropdown .cart-list .product-widget .product-body .product-precios {
+  color: #D10024;
 }
 
 .cart-dropdown .cart-btns {
@@ -978,68 +993,6 @@ textarea.input {
   text-transform: uppercase;
 }
 
-/*=========================================================
-	05 -> HOT DEAL
-===========================================================*/
-
-#hot-deal.section {
-  padding: 60px 0px;
-  margin: 30px 0px;
-  background-color: #E4E7ED;
-  background-image: url('../img/hotdeal.png');
-  background-position: center;  
-  background-repeat: no-repeat;
-}
-
-.hot-deal {
-  text-align: center;
-}
-
-.hot-deal .hot-deal-countdown {
-  margin-bottom: 30px;
-}
-
-.hot-deal .hot-deal-countdown>li {
-  position: relative;
-  display: inline-block;
-  width: 100px;
-  height: 100px;
-  background: #D10024e6;
-  text-align: center;
-  border-radius: 50%;
-  margin: 0px 5px;
-}
-
-.hot-deal .hot-deal-countdown>li>div {
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
-}
-
-.hot-deal .hot-deal-countdown>li>div h3 {
-  color: #FFF;
-  margin-bottom: 0px;
-}
-
-.hot-deal .hot-deal-countdown>li>div span {
-  display: block;
-  font-size: 10px;
-  text-transform: uppercase;
-  color: #FFF;
-}
-
-.hot-deal p {
-  text-transform: uppercase;
-  font-size: 24px;
-}
-
-.hot-deal .cta-btn {
-  margin-top: 15px;
-}
 
 /*=========================================================
 	06 -> PRODUCT
@@ -1319,9 +1272,10 @@ textarea.input {
   color: #8D99AE;
 }
 
-.product-widget .product-body .product-name {
+.product-widget .product-body .product-name, .product-color {
   text-transform: uppercase;
   font-size: 14px;
+  margin-left: 30px;
 }
 
 .product-widget .product-body .product-name>a {
